[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.5 patchlevel 2                                 ??? ??, 2012

Hardcode:
 * render_string has been modified to work with multiple output formatters,
   so it can display the appropriate color syntax for the client. [GM]

Major changes:
 * 256 Color support. Using 24 bit internally for representation and
   downscaling to the client's possible output values. Use
   SOCKSET colorstyle=xterm256 to see 256 color support, with
   ansi(+colorname/+colorname,...) or ansi(#hexcode/#hexcode) for
   extended color support, or @set me=xterm256. [GM] [MG]
 * New SOCKSET socket command for changing socket options. Replaces the
   @sockset command added in p1 for mortals, and can be used at the
   login screen. Suggested by Sketch. [MG]
 * @sockset is now @sockset <desc>[=<opt>,<value>[,...]], to query current
   options or set options for any descriptor. [MG]
 * The old @doing command has now been removed, and replaced with the normal
   standard-attribute command (@doing <object>[=<message>]). [MG]

Commands:
 * look now takes an /opaque switch, which hides contents listings. Suggested
   by Wiggles. [MG]
 * @break and @assert now take a /queued switch, which causes the new <action
   list> to be queued instead of run immediately, and an /inline switch which
   gives default behaviour. For Rhost compatability. [MG]

Functions:
 * colors() returns a list of all known color names known by PennMUSH, and
   info about a particular color. [GM]
 * valid() has two new categories, for validating color names and color code
   sequences for ansi(). [MG]
 * etime() formats elapsed times using the same rules as in WHO. [SW]

Minor changes:
 * The meaning of the COLOR flag has been restored. ANSI flag once again 
   means only highlight is supported, while COLOR means all ANSI 8 colors